[package]
name = "indy2_vdr"
description = "A client library for interacting with Indy Ledger 2.0."
version = "0.0.1"
authors = ["Artem Ivanov <artem.ivanov@dsr-corporation.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "./README.md"

[lib]
name = "indy2_vdr"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib", "cdylib"]

[features]
default = []
ledger_test = []
migration = []
basic_signer = []

[dependencies]
log = "0.4"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
async-trait = "0.1.73"
hex = "0.4.3"
futures = "0.3.28"
once_cell = "1.18.0"
secp256k1 = { version = "0.28.0", features = ["recovery", "rand"] }
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
rand = "0.8.5"
thiserror = "1.0.49"
web3 = "0.19.0"

[dev-dependencies]
bs58 = "0.5.0"
env_logger = "0.10.0"
