[package]
name = "migration"
description = "This package contains an execution script demonstratin the migration flow from Indy to Besu ledger"
version = "0.1.0"
authors = ["artem.ivanov <artem.ivanov@dsr-corporation.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
async-trait = "0.1.73"
bs58 = "0.5.0"
futures = "0.1.23"
indy2_vdr = { path = "../../vdr", features = ["migration", "basic_signer"] }
vdrtools = { git = "https://gitlab.com/evernym/verity/vdr-tools.git" }
serde = "1.0.188"
serde_json = "1.0.107"
